--------------------------------------------------------------------------------------------------------------------------------------------
TAG v01-01-00
--------------------------------------------------------------------------------------------------------------------------------------------
Efficiency improvements addressing hotspots identified by extensive algorithm profiling. Frequently use kd-trees to avoid expensive calculations.

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v01-00-00
--------------------------------------------------------------------------------------------------------------------------------------------
Milestone v01 release.
Update to reflect recent changes to PandoraSDK.
Improved const-correctness. Algorithms are now only exposed to pointers to const managed-objects. Access to managed-object non-const functionality is now only via Pandora APIs.
Added concrete implementation of LArTransformationPlugin; hard-coded detector height no longer required.
Moved wire pitch from LArTransformationPlugin to LArPseudoLayerPlugin.
Generalised 'GetExtremalCoordinatesXZ(...)' method so that it works in both 2D and 3D, and rename it 'GetExtremalCoordinates(...)'.
Added a 3D sliding linear fit, made up of two 2D sliding linear fits.
Upgraded pointing clusters to work in 3D as well as 2D.
Added configurable parameters to reject input hits based on cell length scales.
Added methods for relating hits to MC particles.
Added CheatingClusterCharacterisation algorithm.
Added CheatingVertexCreation algorithm.
Added CosmicRayBuilding algorithm.
Added NeutrinoVertexCreation algorithm.
Added ParticleAnalysis algorithm.
Added ProximityBasedMerging algorithm.
Added TrackRecovery algorithm.
Added VertexBasedPfoMerging algorithm.