@@ -1,7 +1,17 @@
 --------------------------------------------------------------------------------------------------------------------------------------------
+TAG v02-00-00
+--------------------------------------------------------------------------------------------------------------------------------------------
+Update to reflect API change for calo hit creation.
+Exception-handling change in ParticleMonitoring algorithm.
+Update a few header file include paths.
+Fixed CXX_FLAGS for clang 6.0 on APPLE.
+
+--------------------------------------------------------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------------------
 TAG v01-01-00
 --------------------------------------------------------------------------------------------------------------------------------------------
 Efficiency improvements addressing hotspots identified by extensive algorithm profiling. Frequently use kd-trees to avoid expensive calculations.
+Improve specification of CMAKE_CXX_FLAGS.
 
 --------------------------------------------------------------------------------------------------------------------------------------------
 TAG v01-00-00
@@ -34,6 +44,7 @@ Tuning and improved exception handling.
 Address issues highlighted by coverity.
 Makefile and CMakeLists overhaul.
 
+--------------------------------------------------------------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------------------------------------------------------------
 TAG v00-06
 --------------------------------------------------------------------------------------------------------------------------------------------
